--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Weeks of Contribution</title>
+<title><h1>Weeks of Contribution</title>
 <!-- Detials to appear in search -->
 <meta name="description" content="Official Website of Mozilla Tamil Nadu (a local community in Mozilla India) hosted on github which primarily publishes blogs of events of the community and accept registration of volunteers / members">
 	<meta name="keywords" content="MozillaTN,Mozilla TamilNadu,Webmaker TamilNadu,FSATN">
